# multi-agent-pathfinding

./: README.md  config.yaml  pyproject.toml
pathfinding/: environment.py  main.py  settings.py  utils.py
pathfinding/Mstar/: example_tests.py  main.cpp  map2.pkl  test.py
pathfinding/model/: core.py
pathfinding/models/dhc/: __init__.py  buffer.py  evaluate.py  model.py  train.py  visualize.py  worker.py
pathfinding/models/mstar/: call_cpp.py  evaluate.py  main.cpp  main_M.cpp  main_mstar.cpp
pathfinding/test_cases/: 10length_16agents_0.1density.pkl  10length_16agents_0.3density.pkl  10length_32agents_0.1density.pkl  10length_4agents_0.1density.pkl  10length_4agents_0.3density.pkl  10length_8agents_0.1density.pkl  10length_8agents_0.3density.pkl  20length_16agents_0.1density.pkl  20length_16agents_0.3density.pkl  20length_32agents_0.1density.pkl  20length_32agents_0.3density.pkl  20length_4agents_0.1density.pkl  20length_4agents_0.3density.pkl  20length_8agents_0.1density.pkl  20length_8agents_0.3density.pkl  30length_16agents_0.1density.pkl  30length_16agents_0.3density.pkl  30length_32agents_0.1density.pkl  30length_32agents_0.3density.pkl  30length_4agents_0.1density.pkl  30length_4agents_0.3density.pkl  30length_8agents_0.1density.pkl  30length_8agents_0.3density.pkl  40length_16agents_0.1density.pkl  40length_16agents_0.3density.pkl  40length_32agents_0.1density.pkl  40length_32agents_0.3density.pkl  40length_4agents_0.1density.pkl  40length_4agents_0.3density.pkl  40length_8agents_0.1density.pkl  40length_8agents_0.3density.pkl
tests/: test_imports.py
